# agh-bpp-stats

./: .env.sample  .eslintrc.js  .eslintrc.json  .gitignore  LICENSE  README.md  app.ts  author-pub-pts.ts  bpp.py  disciplines.py  faculties.py  faculties_names.py  main.py  package.json  pipfile  pyproject.toml  tsconfig.json  tsconfig.release.json
.run/: Debug.run.xml
badap_stats/: app.py  badap.py  io.py  network.py  stats.py
src/: algorithms.ts  bpp.ts  constants.ts  departments.ts  discipline.ts  dyscyplines.ts  evaluation.ts  evaluation.types.d.ts  examples.ts  got-client.ts  helpers.ts  io.ts  main.ts  positions.ts  resolvers.ts  types.d.ts
