[tool.poetry]
name = "badap-stats"
version = "0.1.0"
description = ""
authors = ["Krzysztof Bzowski <kbzowski@agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.2"
python-dotenv = "^1.0.1"
bs4 = "^0.0.2"
pandas = "^2.2.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
